docs: evidencia JaCoCo en README y mejoras SonarQube (inventory)
- README: sección Resultados de cobertura con tabla y capturas products/inventory
- InventoryController: quitar wrapper @ApiResponses (usar @ApiResponse repeatable), Stream.toList()
- ProductsServiceAdapterTest: quitar import Mono no usado, lambda con una sola invocación (mono::block)

Made-with: Cursor