@@ -15,7 +15,6 @@ import ecommerce.app.inventory.domain.IdempotencyRecord;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
@@ -28,7 +27,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Adaptador HTTP: inventario y compras en formato JSON:API.
@@ -66,16 +64,14 @@ public class InventoryController {
 	}
 
 	@Operation(summary = "Listar compras", description = "Listado paginado de compras realizadas (más recientes primero). Para admin/operator.")
-	@ApiResponses({
-			@ApiResponse(responseCode = "200", description = "Lista de compras"),
-			@ApiResponse(responseCode = "401", description = "No autenticado")
-	})
+	@ApiResponse(responseCode = "200", description = "Lista de compras")
+	@ApiResponse(responseCode = "401", description = "No autenticado")
 	@GetMapping(value = "/purchases", produces = JSON_API_MEDIA_TYPE)
 	public ResponseEntity<JsonApiDocument<?>> listPurchases(
 			@Parameter(description = "Número de página (base 1)") @RequestParam(name = "page[number]", defaultValue = "1") int pageNumber,
 			@Parameter(description = "Tamaño de página (máx 100)") @RequestParam(name = "page[size]", defaultValue = "20") int pageSize) {
 		Page<ecommerce.app.inventory.domain.Purchase> page = listPurchasesUseCase.list(pageNumber, pageSize);
-		List<PurchaseResource> data = page.getContent().stream().map(PurchaseResource::from).collect(Collectors.toList());
+		List<PurchaseResource> data = page.getContent().stream().map(PurchaseResource::from).toList();
 		JsonApiDocument<?> doc = JsonApiDocument.<List<PurchaseResource>>builder()
 				.data(data)
 				.meta(Map.of("totalRecords", page.getTotalElements()))
@@ -84,11 +80,9 @@ public class InventoryController {
 	}
 
 	@Operation(summary = "Consultar inventario", description = "Devuelve el inventario de un producto. Valida que el producto exista en el Products Service.")
-	@ApiResponses({
-			@ApiResponse(responseCode = "200", description = "Inventario encontrado"),
-			@ApiResponse(responseCode = "404", description = "Producto o inventario no encontrado"),
-			@ApiResponse(responseCode = "503", description = "Products Service no disponible")
-	})
+	@ApiResponse(responseCode = "200", description = "Inventario encontrado")
+	@ApiResponse(responseCode = "404", description = "Producto o inventario no encontrado")
+	@ApiResponse(responseCode = "503", description = "Products Service no disponible")
 	@GetMapping(value = "/inventory/{productId}", produces = JSON_API_MEDIA_TYPE)
 	public ResponseEntity<JsonApiDocument<?>> getInventory(
 			@Parameter(description = "UUID del producto") @PathVariable UUID productId) {
@@ -107,11 +101,9 @@ public class InventoryController {
 	}
 
 	@Operation(summary = "Crear o actualizar inventario", description = "Crea o actualiza el stock disponible de un producto. Body: {\"available\": <número >= 0}.")
-	@ApiResponses({
-			@ApiResponse(responseCode = "200", description = "Inventario actualizado"),
-			@ApiResponse(responseCode = "422", description = "available debe ser >= 0"),
-			@ApiResponse(responseCode = "401", description = "No autenticado")
-	})
+	@ApiResponse(responseCode = "200", description = "Inventario actualizado")
+	@ApiResponse(responseCode = "422", description = "available debe ser >= 0")
+	@ApiResponse(responseCode = "401", description = "No autenticado")
 	@PutMapping(value = "/inventory/{productId}", consumes = JSON_API_MEDIA_TYPE, produces = JSON_API_MEDIA_TYPE)
 	public ResponseEntity<JsonApiDocument<?>> setInventory(
 			@Parameter(description = "UUID del producto") @PathVariable UUID productId,
@@ -127,13 +119,11 @@ public class InventoryController {
 	}
 
 	@Operation(summary = "Registrar compra", description = "Descuenta stock del inventario. Valida producto existe y stock suficiente. Idempotente: repetición con el mismo Idempotency-Key devuelve la misma respuesta sin descontar de nuevo.")
-	@ApiResponses({
-			@ApiResponse(responseCode = "201", description = "Compra registrada"),
-			@ApiResponse(responseCode = "404", description = "Producto o inventario no encontrado"),
-			@ApiResponse(responseCode = "422", description = "Stock insuficiente"),
-			@ApiResponse(responseCode = "409", description = "Conflicto de concurrencia (reintentar)"),
-			@ApiResponse(responseCode = "401", description = "No autenticado")
-	})
+	@ApiResponse(responseCode = "201", description = "Compra registrada")
+	@ApiResponse(responseCode = "404", description = "Producto o inventario no encontrado")
+	@ApiResponse(responseCode = "422", description = "Stock insuficiente")
+	@ApiResponse(responseCode = "409", description = "Conflicto de concurrencia (reintentar)")
+	@ApiResponse(responseCode = "401", description = "No autenticado")
 	@PostMapping(value = "/purchases", consumes = JSON_API_MEDIA_TYPE, produces = JSON_API_MEDIA_TYPE)
 	public ResponseEntity<?> purchase(
 			@Valid @RequestBody PurchaseRequest request,
